# plagiarism-grading-system-

./: .gitignore  README.md  manage.py  pyproject.toml
assets/files/user_uploaded/: CHAPTER_THREE.docx  Faith_csc_423_ass.docx  Olubusolami_19CG026487_-_Olubusolami_Sogunle_1.docx  test.txt
base/: admin.py  essay_model.py  forms.py  models.py  plagiarism_model.py  test_essay.py  urls.py  views.py
base/migrations/: 0001_initial.py  0002_alter_plagarism_sources_alter_similarity_sources_and_more.py  0003_remove_plagarism_score_plagarism_plagarized_and_more.py
base/templates/base/: auth.html  base.html  dashboard.html  register.html
base/templates/base/components/: navbar.html  sidebar teacher.html  sidebar.html
base/templates/base/components/dashboard/: card.html
base/templates/base/students/: assignment.html  course.html  enrollment_form.html  home.html  register.html  report.html  submission.html
base/templates/base/teachers/: assignment.html  assignment_creation.html  course.html  course_creation.html  register.html  report.html  submissions.html
grading_site/: asgi.py  settings.py  urls.py  wsgi.py
